--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,17 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 */
 /* reset */
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align:middle;
+	margin-bottom: 0;
+	margin-left: 0px;
+	margin-right: 0px;
+	margin-top: 0;
+}
 article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {display: block;}
 ol,ul{list-style:none;margin:0;padding:0;}
 blockquote,q{quotes:none;}
@@ -33,8 +43,12 @@ img{max-width:100%;}
     src:url(../fonts/BebasNeue-webfont.ttf) format('truetype');
 }
 body{
-	font-family:Arial, Helvetica, sans-serif;
-	background:#FFF;
+	font-family: Arial, Helvetica, sans-serif;
+	background: #FFF;
+	max-width: none;
+	margin-left:200px;
+	margin-right:200px;
+
 }
 .wrap{
 	width:80%;
@@ -72,16 +86,22 @@ body{
 }
 .cssmenu > ul > li > a {
 	text-transform: uppercase;
-	font: normal 15px/30px PT Sans, sans-serif;
-	color:#FFF;
+	font: normal 12px/26px PT Sans, sans-serif;
+	color: #FFF;
 	display:compact;
 	line-height: 3em;
 	padding: 20px 20px;
-	letter-spacing: 1px;
+	letter-spacing: 2px;
+	word-spacing: 1px;
+	white-space: normal;
+	vertical-align: baseline;
+	width:none;
 }
 .header{
-	background:#FFF;
+	background: #FFF;
 	padding: 1% 0;
+	max-width: none;
+
 }
 .header-text {
 	float: right;
@@ -100,6 +120,7 @@ body{
 .banner{
 	background:#FFF;
 	padding-bottom:2%;
+
 }
 .about-banner{
 	background:#363;
@@ -132,7 +153,7 @@ hr {
 }
 .top-box p{
 	color: #000;
-	font-size: 1.8125em;
+	font-size: 1.5125em;
 	line-height: 1.5em;
 	width: 80%;
 	margin: 0 auto;
@@ -151,7 +172,7 @@ hr {
 .span_1_of_5  h3{
 	color:#FFF;
 	margin-bottom: .5em;
-	font-size: 1.2em;
+	font-size: 0.8em;
 	line-height: 1.2;
 	font-family: 'PT Sans', sans-serif;
 	font-weight: normal;
@@ -266,12 +287,12 @@ hr {
 .caption{
 	background:#FFF;
 	padding:10px;
-	text-align:center;
+	text-align:left;
 	font-size:1em;
 }
 hr.hr {
 	border-bottom: 1px solid #000;
-	width: 133px;
+	width: 50px;
 	position: relative;
 	top: -12px;
 }
@@ -357,7 +378,7 @@ time {
 }
 .footer-text h2{
 	color:#fff;
-	font-size:3em;
+	font-size:2em;
 	font-family: 'bebas_neueregular';
 	text-transform:uppercase;
 	margin-bottom:2%;
@@ -962,7 +983,7 @@ p.txt2{
 		width: 350px;
 	}
 	.span_1_of_5 h3 {
-		font-size: 13px;
+		font-size: 10px;
 	}
 	.span_1_of_4 h3 a {
 		font-size: 1.2em;
