--- a/css/slider.css
+++ b/css/slider.css
@@ -1,7 +1,7 @@
 .slider{
 	position:relative;
-	margin-left:20px;
-	margin-right:20px;
+	margin-left:0px;
+	margin-right:0px;
 }
 .theme-default .nivoSlider {
 	position:relative;
@@ -24,13 +24,13 @@
 }
 .theme-default .nivo-controlNav a {
 	display:inline-block;
-	width:15px;
+	width:10px;
 	height:15px;
 	background:#FFF;
 	border-radius:2em;
 	text-indent:-9999px;
 	border:0;
-	margin:0 4px;
+	margin:0px 4px;
 }
 .theme-default .nivo-controlNav a.active,.theme-default .nivo-controlNav a:hover{
 	background:#E4E24F;
@@ -79,10 +79,10 @@
 	overflow: hidden;
 }
 .nivoSlider img {
-	position:absolute;
-	top:0px;
-	left:0px;
-	max-width: none;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	max-width: auto;
 }
 .nivo-main-image {
 	display: block !important;
